Fix {bz:1367}. Shift the last part of weblog util links up a little bit so it looks aligned.
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/trunk@10401 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -1897,3 +1897,9 @@ span.st-weblog-nextentries:before {
 div.widget {
     background-color:#fff ! important;
 }
+
+#page-control-category-selector {
+    margin-top:-5px;
+}
+
+
